--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <header>
                 <div class="caixa">
-                    <img src ="imagens/logo.png">
+                    <img src ="Imagens/logo.png">
                    
                     <nav>
                         <ul class="navegacao">
@@ -26,13 +26,13 @@
                 </div>             
         </header>
 
-        <img class= "banner" src = "imagens/banner.jpg">
+        <img class= "banner" src = "Imagens/banner.jpg">
 
         <main>
             <section class="principal">
                 <h2 class="tituloPrincipal">Sobre a Barbearia Alura</h2>
 
-                <img class ="utensilios" src = "imagens/utensilios.jpg" alt="Utensilios de um barbeiro">
+                <img class ="utensilios" src = "Imagens/utensilios.jpg" alt="Utensilios de um barbeiro">
 
                 <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -69,7 +69,7 @@
             </section>
         </main>
         <footer>
-            <img src="imagens/logo-branco.png">
+            <img src="Imagens/logo-branco.png">
             <p class="copyright">&copy;Copyright Barbearia Alura - 2022</p>
         </footer>
     </body>
