--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <li class = "itens">Pontualidade</li>
                             <li class = "itens">Limpeza</li>
                         
-                        </ul><img src = "imagens/beneficios.jpg" class="imagemBeneficios">
+                        </ul><img src = "Imagens/beneficios.jpg" class="imagemBeneficios">
                     </div>
                 <div class = "video">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
