--- a/produtos.html
+++ b/produtos.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div class="caixa">
-                <h1><img src ="imagens/logo.png"></h1>
+                <h1><img src ="Imagens/logo.png"></h1>
 
                 <nav>
                     <ul>
@@ -50,7 +50,7 @@
         </main>
 
         <footer>
-            <img src="imagens/logo-branco.png">
+            <img src="Imagens/logo-branco.png">
             <p class="copyright">&copy;Copyright Barbearia Alura - 2022</p>
         </footer>
     </body>
